// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VotesFilter should render 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <div
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 dLCfwp"
          >
            <div
              class="flex items-center justify-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render default 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <div
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 dLCfwp"
          >
            <div
              class="flex items-center justify-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 fjgGxm opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="w-64 px-6 py-4"
          >
            <label
              class="flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--all"
            >
              <span>
                <input
                  checked=""
                  class="Checkbox-sc-17gwqiq-0 jArhLO rounded-lg"
                  color="success"
                  name="all"
                  type="checkbox"
                />
              </span>
              <span>
                All
              </span>
            </label>
            <label
              class="flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--current"
            >
              <span>
                <input
                  class="Checkbox-sc-17gwqiq-0 jArhLO rounded-lg"
                  color="success"
                  name="current"
                  type="checkbox"
                />
              </span>
              <span
                class="pt-px"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with current option selected 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <div
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 jxlhJv"
          >
            <div
              class="flex absolute right-0 justify-center items-center mr-2 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background"
            >
              <div
                class="w-2 h-2 rounded-full bg-theme-danger-500"
              />
            </div>
            <div
              class="flex items-center justify-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 fjgGxm opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="w-64 px-6 py-4"
          >
            <label
              class="flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--all"
            >
              <span>
                <input
                  class="Checkbox-sc-17gwqiq-0 jArhLO rounded-lg"
                  color="success"
                  name="all"
                  type="checkbox"
                />
              </span>
              <span>
                All
              </span>
            </label>
            <label
              class="flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--current"
            >
              <span>
                <input
                  checked=""
                  class="Checkbox-sc-17gwqiq-0 jArhLO rounded-lg"
                  color="success"
                  name="current"
                  type="checkbox"
                />
              </span>
              <span
                class="pt-px"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with disabled current option 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <div
            class="ControlButton__ControlButtonStyled-sc-1xp1l1a-0 dLCfwp"
          >
            <div
              class="flex items-center justify-center w-5 h-5"
            >
              <div
                class="sc-bdfBwQ eBdiJn"
                height="19"
                width="17"
              >
                <svg>
                  filters.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-ocz1je-0 fjgGxm opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
        data-testid="dropdown__content"
        style="opacity: 100; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="w-64 px-6 py-4"
          >
            <label
              class="flex items-center px-2 pb-1 space-x-3 rounded-md cursor-pointer text-theme-secondary-text hover:bg-theme-secondary-100"
              data-testid="VotesFilter__option--all"
            >
              <span>
                <input
                  checked=""
                  class="Checkbox-sc-17gwqiq-0 jArhLO rounded-lg"
                  color="success"
                  name="all"
                  type="checkbox"
                />
              </span>
              <span>
                All
              </span>
            </label>
            <label
              class="flex items-center px-2 pb-1 space-x-3 rounded-md text-theme-secondary-400"
              data-testid="VotesFilter__option--current"
            >
              <span>
                <input
                  class="Checkbox-sc-17gwqiq-0 jArhLO rounded-lg"
                  color="success"
                  disabled=""
                  name="current"
                  type="checkbox"
                />
              </span>
              <span
                class="pt-px"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
